--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "asyncio>=3.4.3",
     "fastapi>=0.115.12",
+    "rich>=14.0.0",
     "uvicorn[standard]>=0.34.1",
 ]
 
